--- a/Thymeleaf/mudi/src/main/resources/templates/home.html
+++ b/Thymeleaf/mudi/src/main/resources/templates/home.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>home</title>
 </head>
 <body>
-    <div th:each="pedido : ${pedidos}">
+    <div class="container">
+    <div class="card" th:each="pedido : ${pedidos}">
 
-    	<div th:text="${pedido.nomeProduto}">Nome do produto</div>
-        
-        <div>Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
- <div>Data de entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2022</span></div>
-               
+    	<div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto</div>
+
+        <div class="card-body">
+         <div class="row">   
+        <div class="col-12 col-sm-8 mb-3">
+        <div class="row">
+        <div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
+ <div class="col-md-7">Data de entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2022</span></div>
+        </div>      
         <div>Produto</div>
-        <div><input th:value="${pedido.urlProduto}" value="url do produto" /></div>
+        <div><input class="form-control" th:value="${pedido.urlProduto}" value="url do produto" /></div>
 
         <div>Descrição</div>
  
@@ -24,10 +31,15 @@
                 Descrição do pedido
             </textarea>
         </div>
-
+    </div>
+    <div class="col-12 col-sm-4">
         <div>
-            <img th:src="${pedido.urlImagem}" src="" alt="" />
+            <img class="img-thumbnail" th:src="${pedido.urlImagem}" src="" alt="" />
         </div> 
     </div>
+    </div>
+    </div>
+    </div>
+</div>
 </body>
 </html>
